# Nerdbank.Cryptocurrencies

./: .editorconfig  .gitignore  .gitmodules  .vsconfig  CONTRIBUTING.md  Cargo.toml  Directory.Build.props  Directory.Build.rsp  Directory.Build.targets  Directory.Packages.props  Directory.Traversal.targets  LICENSE  Nerdbank.Cryptocurrencies.sln  Nerdbank.Cryptocurrencies.slnx  Nerdbank.Zcash.sln  README.md  azure-pipelines.yml  global.json  init.ps1  nerdbank-zcash-rust.code-workspace  nuget.config  strongname.snk  stylecop.json  version.json
.config/: dotnet-tools.json
.devcontainer/: Dockerfile
.github/: FUNDING.yml  dependabot.yml  manifest  renovate.json  renovate.json5
.github/workflows/: build.yml  docs.yml  package_retention.yml  release.yml
azure-pipelines/: Get-RustTargets.ps1  Info.plist  android.yml  build.yml  build_ios_framework.ps1  cargo.yml  cross.yml  dotnet-test-cloud.ps1  dotnet.yml  install-cargo-dependencies.yml  pack.yml  publish-codecoverage.yml  publish-symbols.yml  publish.yml  publish_android.yml  release.yml  signfiles.txt  velopack.yml
azure-pipelines/artifacts/: apps-android.ps1  apps-ios.ps1  apps.ps1  rust.ps1  velopack-inputs.ps1  windows-desktop-app-ARM64.ps1  windows-desktop-app-x64.ps1
doc/: index.md
doc/zec/: UA_extract_receivers.md
docfx/: docfx.json  index.md  toc.yml
docfx/docs/: features.md  getting-started.md
src/: .editorconfig  Add-LanguageTranslation.ps1  AssemblyInfo.cs  AssemblyInfo.vb  Directory.Build.props  dirs.proj
src/Nerdbank.Bitcoin/: .editorconfig  Bip32HDWallet.ChainCode.cs  Bip32HDWallet.ExtendedKeyBase.cs  Bip32HDWallet.ExtendedPrivateKey.cs  Bip32HDWallet.ExtendedPublicKey.cs  Bip32HDWallet.ParentFingerprint.cs  Bip32HDWallet.cs  Bip39Mnemonic.WordList.cs  Bip39Mnemonic.cs  Bip44MultiAccountHD.cs  BitcoinP2PKHAddress.cs  BitcoinUtilities.cs  Nerdbank.Bitcoin.csproj  PrivateKey.cs  PublicAPI.Unshipped.txt  PublicKey.cs  README.md  RawTransaction.cs  SharedStrings.es.resx  SharedStrings.fr.resx  SharedStrings.ru.resx  Strings.es.resx  Strings.fr.resx  Strings.ko.resx  Strings.pt.resx  Strings.resx  Strings.ru.resx  Strings.zh-Hans.resx  Usings.cs
src/Nerdbank.Cryptocurrencies/: .editorconfig  Base58Check.cs  Bech32.cs  Bip32HDWallet.ExtendedKeyBase.cs  Bip32HDWallet.ExtendedPrivateKey.cs  Bip32HDWallet.ExtendedPublicKey.cs  Bip32HDWallet.KeyPath.cs  Bip32HDWallet.PrivateKey.cs  Bip32HDWallet.PublicKey.cs  Bip32HDWallet.cs  Bip32KeyPath.cs  Bip39Mnemonic.WordList.cs  Bip39Mnemonic.cs  Bip39SeedPhrase.WordList.cs  Bip39SeedPhrase.cs  Bip44MultiAccountHD.cs  BitUtilities.cs  Blake2B.cs  CompactSize.cs  CompatibilitySuppressions.xml  CryptoUtilities.cs  DecodeError.cs  DecodingReader.cs  IExtendedKey.cs  IKey.cs  IKeyWithTextEncoding.cs  InvalidKeyException.cs  JsonTypeInfo.cs  Nerdbank.Cryptocurrencies.csproj  PublicAPI.Unshipped.txt  README.md  Security.cs  SecurityAmount.cs  SecuritySymbolOnlyComparer.cs  SharedStrings.resx  SharedStrings.ru.resx  StableCoins.cs  Strings.es.resx  Strings.fr.resx  Strings.ko.resx  (+5 more)
src/Nerdbank.Zcash/: AccountBalances.cs  AddressKind.cs  Base58Check.cs  Bytes32.cs  Bytes96.cs  Calculator.cs  CompatibilitySuppressions.xml  CompoundUnifiedAddress.cs  CryptoUtilities.cs  Curves.cs  DisposableAction.cs  DiversifierIndex.cs  DiversifierKey.cs  FixedLengthStructs.cs  IFullOrIncomingViewingKey.cs  IFullViewingKey.cs  IIncomingViewingKey.cs  IPoolReceiver.cs  ISpendingKey.cs  IUnifiedEncodableViewingKey.cs  IUnifiedEncodingElement.cs  IUnifiedEncodingElementEqualityComparer.cs  IUnifiedPoolReceiver.cs  IViewingKey.cs  IZcashKey.cs  InsufficientFundsException.cs  InvalidAddressException.cs  LightWallet.cs  LightWalletClient.cs  LightWalletException.cs  LightWalletServers.cs  ManagedLightWalletClient.cs  Memo.cs  NativeBindings.targets  NativeMethods.cs  Nerdbank.Zcash.csproj  NullifierDerivingKey.cs  OrchardAddress.cs  OrchardReceiver.cs  ParseError.cs  (+73 more)
src/Nerdbank.Zcash.App/: .editorconfig  Directory.Build.props  Directory.Build.targets  DisableBuild.targets  README.md  applogo.icns  dirs.proj
src/Nerdbank.Zcash.Cli/: .editorconfig  AccountsCommand.cs  BalanceCommand.cs  BalancesCommand.cs  DeriveCommand.cs  HistoryCommand.cs  ImportAccountCommand.cs  Nerdbank.Zcash.Cli.csproj  NewAccountCommand.cs  PaymentsCommand.cs  PriceCommand.cs  Program.cs  RequestPaymentCommand.cs  SendCommand.cs  ShieldCommand.cs  Strings.es.resx  Strings.fr.resx  Strings.ko.resx  Strings.pt.resx  Strings.resx  Strings.ru.resx  Strings.zh-Hans.resx  SyncCommand.cs  SyncFirstCommandBase.cs  TexCommand.cs  UACommand.cs  Utilities.cs  WalletUserCommandBase.cs
src/Nerdbank.Zcash.Web/: Nerdbank.Zcash.Web.csproj  Program.cs  _Imports.razor
src/SharedSource/: BitcoinUtilities.cs  FixedLengthStructs.cs  SharedCryptoUtilities.cs  SharedSource.projitems  SharedSource.shproj
src/nerdbank-zcash-rust/: Cargo.toml  Cross.toml  Generate-3rdPartyNotices.ps1  README.md  build.rs  build_all.ps1  generate_cs_bindings.ps1  uniffi.toml
src/nerdbank-zcash-rust/.cargo/: config.toml
src/nerdbank-zcash-rust/cargoTomlTargets/: .gitignore
src/nerdbank-zcash-rust/cargoTomlTargets/others/: Cargo.toml
src/nerdbank-zcash-rust/cargoTomlTargets/win-arm64/: Cargo.toml
src/nerdbank-zcash-rust/src/: analysis.rs  backend_client.rs  backing_store.rs  block_source.rs  blockrange.rs  error.rs  ffi.udl  grpc.rs  incoming_payments.rs  interop.rs  lib.rs  lightclient.rs  lightwallet.rs  mnemonic.rs  orchard.rs  prover.rs  qr_codes.rs  resilience.rs  sapling.rs  send.rs  shield.rs  sql_statements.rs  sync.rs  test_constants.rs  util.rs
test/: .editorconfig  AOT.props  dirs.proj
test/AotCompatibilityTest/: AotCompatibilityTest.csproj  Program.cs
test/Nerdbank.Bitcoin.Tests/: Bip32HDWalletTestBase.cs  Bip39MnemonicTests.cs  Bip44MultiAccountHDTests.cs  BitcoinP2PKHAddressTests.cs  ExtendedKeyBaseTests.cs  ExtendedPrivateKeyTests.cs  ExtendedPublicKeyTests.cs  PrivateKeyTests.cs  (+3 more)
tools/: Get-RustTargets.ps1  Info.plist  Install-AndroidBuildTools.ps1  Install-DotNetSdk.ps1  build_ios_framework.ps1  dotnet-test-cloud.ps1
(+632 files in other folders)
