[workspace]
resolver = "3"
members = ["src/nerdbank-zcash-rust"]

# Workspace dependency defaults copied from `external/librustzcash` so path
# packages inside that repo which inherit `workspace.dependencies` can be
# resolved when used as path dependencies here.
[workspace.dependencies]
# Intra-workspace dependencies
equihash = { version = "0.2", path = "external/librustzcash/components/equihash", default-features = false }
zcash_address = { version = "0.10", path = "external/librustzcash/components/zcash_address", default-features = false }
zcash_client_backend = { version = "0.21", path = "external/librustzcash/zcash_client_backend" }
zcash_encoding = { version = "0.3", path = "external/librustzcash/components/zcash_encoding", default-features = false }
zcash_keys = { version = "0.12", path = "external/librustzcash/zcash_keys" }
zcash_protocol = { version = "0.7", path = "external/librustzcash/components/zcash_protocol", default-features = false }
zip321 = { version = "0.6", path = "external/librustzcash/components/zip321" }

zcash_note_encryption = "0.4.1"
zcash_primitives = { version = "0.26", path = "external/librustzcash/zcash_primitives", default-features = false }
zcash_proofs = { version = "0.26", path = "external/librustzcash/zcash_proofs", default-features = false }

pczt = { version = "0.5", path = "external/librustzcash/pczt" }

# Shielded protocols
bellman = { version = "0.14", default-features = false, features = ["groth16"] }
ff = { version = "0.13", default-features = false }
group = "0.13"
incrementalmerkletree = { version = "0.8.2", default-features = false }
shardtree = "0.6.1"
zcash_spec = "0.2"

# Payment protocols
# - Sapling
bitvec = { version = "1", default-features = false, features = ["alloc"] }
blake2s_simd = { version = "1", default-features = false }
bls12_381 = "0.8"
jubjub = "0.10"
redjubjub = { version = "0.8", default-features = false }
sapling = { package = "sapling-crypto", version = "0.6", default-features = false }

# - Orchard
orchard = { version = "0.12", default-features = false }
pasta_curves = "0.5"

# - Transparent
bip32 = { version = "=0.6.0-pre.1", default-features = false, features = [
	"alloc",
] }
block-buffer = { version = "=0.11.0-rc.3" }
crypto-common = { version = "=0.2.0-rc.1" }
ripemd = { version = "0.1", default-features = false }
secp256k1 = { version = "0.29", default-features = false, features = ["alloc"] }
transparent = { package = "zcash_transparent", version = "0.6", path = "external/librustzcash/zcash_transparent", default-features = false }
zcash_script = { version = "0.4.2", default-features = false }
zeroize = { version = "1.7", default-features = false }

# Boilerplate & missing stdlib
getset = "0.1"
nonempty = { version = "0.11", default-features = false }

# CSPRNG
rand = { version = "0.8", default-features = false }
rand_core = { version = "0.6", default-features = false }
rand_distr = { version = "0.5", default-features = false }

# Currency conversions
rust_decimal = { version = "1.35", default-features = false, features = [
	"serde",
] }

# Digests
blake2b_simd = { version = "1", default-features = false }
sha2 = { version = "0.10", default-features = false }

# Documentation
document-features = "0.2"

# Encodings
base64 = "0.22"
bech32 = { version = "0.11", default-features = false, features = ["alloc"] }
bitflags = "2"
bs58 = { version = "0.5", default-features = false, features = [
	"alloc",
	"check",
] }
byteorder = "1"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
percent-encoding = "2.1.0"
postcard = { version = "1", default-features = false, features = ["alloc"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
regex = { version = "1.11", default-features = false }

# HTTP
hyper = "1"
http-body-util = "0.1"
hyper-util = { version = "0.1.1", features = ["tokio"] }
tokio-rustls = { version = "0.26", default-features = false }
webpki-roots = "1"

# Logging and metrics
memuse = { version = "0.2.2", default-features = false }
tracing = { version = "0.1", default-features = false }

# No-std support
core2 = { version = "0.3", default-features = false, features = ["alloc"] }

# Parallel processing
crossbeam-channel = "0.5"
maybe-rayon = { version = "0.1.0", default-features = false }
rayon = "1.5"

# Protobuf and gRPC
prost = "0.14"
prost-build = "0.14"
tonic = { version = "0.14", default-features = false }
tonic-prost = { version = "0.14", default-features = false }
tonic-prost-build = { version = "0.14", default-features = false }
which = "8"

# Secret management
secrecy = "0.8"
subtle = { version = "2.2.3", default-features = false }

# SQLite databases
rusqlite = { version = "0.37", features = ["bundled"] }
schemerz = "0.2"
schemerz-rusqlite = "0.370"
time = { version = "0.3.22", default-features = false }
uuid = "1.1"

# Static constants and assertions
static_assertions = "1"

# Tests and benchmarks
ambassador = "0.5"
assert_matches = "1.5"
criterion = "0.5"
proptest = ">=1,<1.7"
rand_chacha = "0.3"
rand_xorshift = "0.3"
incrementalmerkletree-testing = "0.3"

# Tor
arti-client = { version = "0.37", default-features = false, features = [
	"compression",
	"rustls",
	"tokio",
] }
dynosaur = "0.3"
fs-mistrust = "0.12"
tokio = "1"
tor-rtcompat = "0.35"
tower = "0.5"
trait-variant = "0.1"

# ZIP 32
aes = "0.8"
bip0039 = { version = "0.12" }
fpe = { version = "0.6", default-features = false, features = ["alloc"] }
zip32 = { version = "0.2", default-features = false }

# Workaround for https://anonticket.torproject.org/user/projects/arti/issues/pending/4028/
time-core = "=0.1.6"

[workspace.package]
edition = "2024"
rust-version = "1.88"
repository = "https://github.com/zcash/librustzcash"
license = "MIT OR Apache-2.0"
categories = ["cryptography::cryptocurrencies"]

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
	'cfg(zcash_unstable, values("zfuture", "nu7"))',
	'cfg(live_network_tests)',
] }
