[package]
name = "nerdbank-zcash-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
uniffi = { version = "0.23.0", features = [ "build" ] }

[dependencies]
group = "0.13.0"
http = "0.2.9"
jubjub = "0.10.0"
lazy_static = "1.4.0"
orchard = "0.5.0"
thiserror = "1.0.47"
tokio = "1.32.0"
uniffi = "0.23.0"
zcash_primitives = "0.12.0"
zingoconfig = { path = "../../external/zingolib/zingoconfig", default-features = true }
zingolib = { path = "../../external/zingolib/zingolib", default-features = true }
