[package]
name = "nerdbank-zcash-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
uniffi = { version = "0.23.0", features = [ "build" ] }

[dependencies]
ff = "0.13.0"
group = "0.13.0"
http = "0.2.9"
jubjub = "0.10.0"
lazy_static = "1.4.0"
orchard = "0.6.0"
pasta_curves = "0.5.1"
thiserror = "1.0.47"
tokio = "1.32.0"
uniffi = "0.23.0"
zcash_primitives = { git = "https://github.com/zingolabs/librustzcash.git", branch = "zingo_rc_branch" }
zingoconfig = { path = "../../external/zingolib/zingoconfig", default-features = true }
zingolib = { path = "../../external/zingolib/zingolib", default-features = true }
