[package]
name = "nerdbank-zcash-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
uniffi = { version = "0.25.0", features = ["build"] }

[dependencies]
ff = "0.13"
futures-util = "0.3"
group = "0.13"
http = "0.2"
jubjub = "0.10"
lazy_static = "1.4"
orchard = "0.6"
pasta_curves = "0.5"
prost = "0.12"
rusqlite = "0.29"
schemer = "0.2"
secrecy = "0.8.0"
thiserror = "1.0"
time = "0.3.31"
tracing = "0.1"
tokio = { version = "1.32", features = [
	"rt",
	"fs",
	"macros",
	"rt-multi-thread",
] }
tonic = { version = "0.10", features = ["gzip", "tls-webpki-roots"] }
uniffi = "0.25"
zcash_address =  { path = "../../external/librustzcash/components/zcash_address" }
zcash_primitives = { path = "../../external/librustzcash/zcash_primitives", features = ["transparent-inputs"] }
zcash_client_backend = { path = "../../external/librustzcash/zcash_client_backend", features = [
	"test-dependencies",
	"transparent-inputs",
	"lightwalletd-tonic",
] }
zcash_client_sqlite = { path = "../../external/librustzcash/zcash_client_sqlite", features = [
	"unstable",
	"transparent-inputs",
] }
zcash_proofs = { path = "../../external/librustzcash/zcash_proofs" }
zeroize = "1.7.0"

[dev-dependencies]
testdir = "0.9.1"

[patch.crates-io]
hdwallet = { path = "../../external/hdwallet" }
