[package]
name = "nerdbank-zcash-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
uniffi = { version = "0.23.0", features = [ "build" ] }

[dependencies]
group = "0.13.0"
http = "0.2.9"
jubjub = "0.10.0"
lazy_static = "1.4.0"
orchard = "0.5.0"
thiserror = "1.0.47"
tokio = "1.32.0"
uniffi = "0.23.0"
zcash_primitives = { git = "https://github.com/zingolabs/librustzcash", features = ["transparent-inputs", "test-dependencies"], rev = "8e582109cad9af14b461f76429f9f0437e860115"  }
zingoconfig = { path = "../../external/zingolib/zingoconfig", default-features = true }
zingolib = { path = "../../external/zingolib/zingolib", default-features = true }

[patch.crates-io]
incrementalmerkletree = { git = "https://github.com/zcash/incrementalmerkletree", rev = "bae25ad89c0c192bee625252d2d419bd56638e48" }
ring = { git = "https://github.com/awakecoding/ring", branch = "0.16.20_alpha" }
shardtree = { git = "https://github.com/zcash/incrementalmerkletree", rev = "bae25ad89c0c192bee625252d2d419bd56638e48" }
