[package]
name = "nerdbank-zcash-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
uniffi = { version = "0.25.0", features = ["build"] }

[dependencies]
ff = "0.13"
futures-util = "0.3"
group = "0.13"
http = "0.2"
jubjub = "0.10"
lazy_static = "1.4"
orchard = "0.6"
pasta_curves = "0.5"
prost = "0.12"
rusqlite = "0.29"
schemer = "0.2"
secrecy = "0.8.0"
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1.32", features = ["rt", "fs", "macros", "rt-multi-thread"] }
tonic = { version = "0.10", features = ["gzip", "tls-webpki-roots"] }
uniffi = "0.25"
zcash_primitives = "0.13"
zcash_client_backend = { version = "0.10", features = [
	"test-dependencies",
	"lightwalletd-tonic",
] }
zcash_client_sqlite = { version = "0.8", features = [
	"unstable",
	"transparent-inputs",
] }
zeroize = "1.7.0"

[dev-dependencies]
testdir = "0.9.1"

[patch.crates-io]
ring = { git = "https://github.com/awakecoding/ring", branch = "0.16.20_alpha" }
